--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
 -    "test": "echo \"Error: no test specified\" && exit 1"
 +    "test": "echo \"Error: no test specified\" && exit 1",
 +    "start": "http-server . -p 8000 -c-1",
+  "description": "eLuvLetter tutorial project",
 +    "dev": "http-server . -p 8000 -c-1"
-   },
