--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 @@ .. @@
-   "scripts": {
--    "test": "echo \"Error: no test specified\" && exit 1"
-+    "test": "echo \"Error: no test specified\" && exit 1",
-+    "start": "http-server . -p 8000 -c-1",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx http-server . -p 8080 -c-1 --cors",
   "description": "eLuvLetter tutorial project",
-+    "dev": "http-server . -p 8000 -c-1"
+    "dev": "npx http-server . -p 8080 -c-1 --cors"
